# cpp-projects

cpp-binding/: CMakeLists.txt  main.cpp  main.py
database-management/: hospital.cpp
fake-time-server/: CMakeLists.txt  README.md  server.cpp
nested-original-array-functions/: main.cc
sqlite/: core.cpp
telemetry-exposing/: CMakeLists.txt  main.cpp
